// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`minWidth renders 0 1`] = `
Array [
  .c0 {
  min-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  min-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  min-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  min-width: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`minWidth renders function 1`] = `
Array [
  .c0 {
  min-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  min-width: has;
}

<div
    className="c0"
  />,
  .c0 {
  min-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  min-width: has;
}

<div
    className="c0"
  />,
]
`;

exports[`minWidth renders invalid theme path 1`] = `
Array [
  .c0 {
  min-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  min-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  min-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  min-width: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`minWidth renders negative number 1`] = `
Array [
  .c0 {
  min-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  min-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  min-width: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  min-width: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`minWidth renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  min-width: July;
}

@media screen and (min-width:November) {
  .c0 {
    min-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-width: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-width: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    min-width: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  min-width: July;
}

@media screen and (min-width:November) {
  .c0 {
    min-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-width: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-width: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    min-width: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  min-width: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    min-width: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-width: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-width: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    min-width: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  min-width: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    min-width: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-width: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-width: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    min-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`minWidth renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    min-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    min-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    min-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    min-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    min-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    min-width: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    min-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    min-width: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`minWidth renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  min-width: July;
}

@media May {
  .c0 {
    min-width: August;
  }
}

@media April {
  .c0 {
    min-width: September;
  }
}

@media January {
  .c0 {
    min-width: November;
  }
}

@media April {
  .c0 {
    min-width: August;
  }
}

@media June {
  .c0 {
    min-width: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  min-width: July;
}

@media May {
  .c0 {
    min-width: August;
  }
}

@media April {
  .c0 {
    min-width: September;
  }
}

@media January {
  .c0 {
    min-width: November;
  }
}

@media April {
  .c0 {
    min-width: August;
  }
}

@media June {
  .c0 {
    min-width: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  min-width: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    min-width: November;
  }
}

@media April {
  .c0 {
    min-width: January;
  }
}

@media January {
  .c0 {
    min-width: December;
  }
}

@media April {
  .c0 {
    min-width: April;
  }
}

@media June {
  .c0 {
    min-width: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  min-width: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    min-width: November;
  }
}

@media April {
  .c0 {
    min-width: January;
  }
}

@media January {
  .c0 {
    min-width: December;
  }
}

@media April {
  .c0 {
    min-width: April;
  }
}

@media June {
  .c0 {
    min-width: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`minWidth renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    min-width: July;
  }
}

@media April {
  .c0 {
    min-width: August;
  }
}

@media January {
  .c0 {
    min-width: September;
  }
}

@media April {
  .c0 {
    min-width: November;
  }
}

@media June {
  .c0 {
    min-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    min-width: July;
  }
}

@media April {
  .c0 {
    min-width: August;
  }
}

@media January {
  .c0 {
    min-width: September;
  }
}

@media April {
  .c0 {
    min-width: November;
  }
}

@media June {
  .c0 {
    min-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    min-width: January;
  }
}

@media April {
  .c0 {
    min-width: December;
  }
}

@media January {
  .c0 {
    min-width: April;
  }
}

@media April {
  .c0 {
    min-width: May;
  }
}

@media June {
  .c0 {
    min-width: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    min-width: January;
  }
}

@media April {
  .c0 {
    min-width: December;
  }
}

@media January {
  .c0 {
    min-width: April;
  }
}

@media April {
  .c0 {
    min-width: May;
  }
}

@media June {
  .c0 {
    min-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`minWidth renders postitive number 1`] = `
Array [
  .c0 {
  min-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  min-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  min-width: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  min-width: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`minWidth renders string 1`] = `
Array [
  .c0 {
  min-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  min-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  min-width: June;
}

<div
    className="c0"
  />,
  .c0 {
  min-width: June;
}

<div
    className="c0"
  />,
]
`;

exports[`minWidth renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`minWidth renders valid theme path 1`] = `
Array [
  .c0 {
  min-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  min-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  min-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  min-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
